revised index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Inscriptions of Lepcis Magna</title>
     </head>
     <body>
-        
+        <header>
+            Inscriptions of Lepcis Magna
+        </header>
     </body>
 </html>
